--- a/soviet.html
+++ b/soviet.html
@@ -11,7 +11,7 @@
 <h3>This is my History IA written for IB. Completed winter 2020.</h3>
 <h3>RQ: What problems in Soviet planning and organization contributed to the early failure of the Soviet invasion of Finland during the Russo-Finish war of 1939?</h3>
 <p> </p>
-<h4>Evaluation of Sources </h4>
+<h3>Evaluation of Sources </h3>
 <p>The aim of this paper is to answer the question, ‘What problems in Soviet planning and organization contributed to the early failure of the Soviet invasion of Finland during the Russo-Finish war?’ This is accomplished using varied sources, namely the Molotov-Ribbentrop pact (1939), and Julia Abelev, “Perceptual Realism and the Winter War of 1939” (2009). These viewpoints offer valuable evaluations of the events in and surrounding the Winter War. They are very useful to give information and context to the Russo-Finish war, and to lend insight on the above question.</p>
 	The Molotov-Ribbentrop Pact (1939) has an origin as a non aggression pact between Joachim von Ribbentrop of Nazi Germany and Vyacheslav Molotov of the USSR. The pact’s purpose was to stop any future fighting with these two states, and to divide up eastern Europe between them. In a secret section of the document the Baltic states (Finland, Estonia, Latvia, and Lithuania) were given to the USSR. This forms the Russian claim of Finland that eventually led to the invasion of Finland in the winter of 1939. </p>
 This document is valuable as it gives context as to why Russia decided to invade Finland. With Nazi Germany at their doorstep, the USSR wanted to have more defense, and occupying Finland allowed them to gain this. The Molotov-Ribbentrop pact also shows the relationship between the Russians and the Germans, which becomes important when looking at the Russian adoption of the Nazi’s Blitzkrieg tactic.</p> 
@@ -40,6 +40,13 @@ This source is valuable because it discusses the decisions and planning of the U
 <h3>Conclusion </h3>
 <p>The USSR during the Russo-Finnish war made a lot of mistakes around their planning to invade Finland. From choosing to adopt the Blitzkrieg tactic, which proved to be useless in the terrain that Finland was defending, to assuming that the invasion would only take a few weeks to conduct. The Russians incurred heavy losses that soured their victory that took place months later. Both of these problems directly lead to an early loss for the Soviets, who only after months of wearing down Finish defenses were able to have a peace treaty signed. The two main problems with the Russians plan to invade Finland were using the wrong tactics, such as tank warfare and Blitzkrieg and were undersupplied due to an underestimation of how long the invasion was going to last, causing them to incur large casualties and fail in the early portion of the Russo-Finish war. 
  </p>
+
+<h3>Bibliography </h3>
+<p> Abelev, Julia “Perceptual Realism and the Winter War of 1939,” intersections 10, no. 3 (2009): 1-19.</p>
+<p> (Molotov-Ribbentrop) “Secret Supplementary Protocols of the Molotov-Ribbentrop Non-Aggression Pact, 1939,” September, 1939, History and Public Policy Program Digital Archive, Published in Nazi-Soviet Relations, 1939- 1941: Documents from the Archives of the German Foreign Office https://digitalarchive.wilsoncenter.org/document/110994</p>
+<p>Trotter, William R. A Frozen Hell: the Russo-Finnish Winter War of 1939-1940. Chapel Hill, NC: Algonquin Books of Chapel Hill, 2000. </p>
+<p>Van Boven, L. (2007). Naive realism. In R. F. Baumeister & K. D. Vohs (Eds.), Encyclopedia of social psychology (Vol. 1, pp. 603-603). Thousand Oaks, CA: SAGE Publications, Inc. doi: 10.4135/9781412956253.n359  </p>
+
 
 </body>
 </html>
