--- a/soviet.html
+++ b/soviet.html
@@ -2,7 +2,7 @@
 <html>
   <link rel="stylesheet" href="style.css">
 <head>
-<title>history</title>
+<title>History IA</title>
 </head>
 <body>
 <li><a href="index.html">Home</a></li>
