--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ function checkTime(i) {
 			<UL>
 				<li><a href="ee.html">Extended Essay</a></li>
 				<li><a href="soviet.html">History IA</a></li>
+				<li><a href="math.html">Math IA</a></li>
 
 			</UL>
 			<h2>About Me</h2>
