--- a/math.html
+++ b/math.html
@@ -15,6 +15,12 @@
 <p>The aim of this paper is to give a resource to teachers, as the handshake problem is a common math problem given to students (NZMaths). The equations can be used to check student work or as teaching material in and of itself. The standard equation, highlighted in the standard variation method section, is corroborated by my sources (see works cited).</p> 
 <p>Some definitions: Variation - Given to the two other problems that are based off the main handshake problem. N - meaning the number of people in a given scenario. H - the number of handshakes performed, only one interaction between a pair of people is counted. P - the number of people in a party, all parties must have the same number of people. Model  - a graphic representation, specifically of the handshake problem.</p> 
 <h3>Circle Model</h3>
+<p>In the handshake problem you are at a dinner party with n number of people. As is customary you shake hands with everyone there, and everyone there shakes hands with you and everyone else. The problem asks how many handshakes were performed at this dinner party?(Connelly)<p> 
+<p>This problem is standard for Middle school students, by putting the students into small groups and having them reenact this scenario amongst themselves. <p>
+<p>This image shows a group of four at the dinner party (n = 4) and we can very simply count the number of lines to get h or the number of handshakes. Here it shows 6 handshake combinations.<p> 
+	<p>This version of the handshake problem is fairly simple. It doesn’t take very long to figure out. With small values it’s easy to do, but the reenactment method only works with small numbers. For instance this is the drawing that you would have to do for when n = 8:<p>
+<p>With this version it gets hard to keep track of how many handshakes are possible. This method is useful for small numbers, but when numbers go into the double digits, another method is needed.<p>
+
 
 
 
