--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Billeneube.github.io/style.css">
 <head>
 <title>psychology IA</title>
 </head>
 <body>
 <li><a href="index.html">Home</a></li>
 
-<h1>Psychology IAy</h1>
+<h1>Psychology IA</h1>
 <p>This is my Psychology IA written for IB. Completed spring 2020.</p>
 
 <h2>Priming and Its Effect on Human Behavior </h2>
