--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="Billeneube.github.io/style.css">
+  <link rel="stylesheet" href="/Billeneube.github.io/style.css">
 <head>
 <title>psychology IA</title>
 </head>
