--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -5,7 +5,7 @@
 <title>psychology IA</title>
 </head>
 <body>
-<li><a href="index.html">Home</a></li>
+<li><a href="/Billeneube.github.io/index.html">Home</a></li>
 
 <h1>Psychology IA</h1>
 <p>This is my Psychology IA written for IB. Completed spring 2020.</p>
