--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -22,6 +22,15 @@
 	<p>Participants were designated control or experimental groups with independent measures, where the paper that was given to them (which contained the word puzzle that they would solve) was shuffled randomly. This system was used to eliminate any potential biases that the researchers would exhibit that might interfere with the priming task or lack thereof, possibly affecting the data. The interference of researcher bias was unlikely, as a standardized script was used to interact with all participants, but an extra level of uncertainty for the researchers allowed no possible bias between the researchers and the control and experimental participants. One problem with this system is that there are a different number of control and experimental data points, so there could be some issue due to the differing size of the data.</p>
 	<h4>Participants  </h4>
 	<p>We chose to do opportunity sampling with students from our school. Students ages ranged from 16 to 18 years of age. Sex, gender, ethnicity, and socioeconomic background were not recorded.  These students were chosen by opportunity, from a sl psychology class, a study hall class, and a few people in the halls with an unknown class. The psychology students were not aware of this study beforehand. The control and independent variables were equally mixed in every class, no class had only control participants or only experimental participants. </p>
+<p> Consent Forms (Appendix  IV)</p>
+<p>Stopwatch</p>
+<p>A stopwatch on a laptop was used in order for the timing to be inconspicuous.</p>
+<p>Word search for control group</p>
+<p>A word search was made out of a standardized list of words. </p>
+<p>Word search for experimental group </p>
+<p>A word search was made out of a standardized list of words.</p>
+<p>Pencils </p>
+<p>A brown colored pencil was provided for each participant to complete the task with.</p>
 
 
 </body>
