--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -22,6 +22,7 @@
 	<p>Participants were designated control or experimental groups with independent measures, where the paper that was given to them (which contained the word puzzle that they would solve) was shuffled randomly. This system was used to eliminate any potential biases that the researchers would exhibit that might interfere with the priming task or lack thereof, possibly affecting the data. The interference of researcher bias was unlikely, as a standardized script was used to interact with all participants, but an extra level of uncertainty for the researchers allowed no possible bias between the researchers and the control and experimental participants. One problem with this system is that there are a different number of control and experimental data points, so there could be some issue due to the differing size of the data.</p>
 	<h4>Participants  </h4>
 	<p>We chose to do opportunity sampling with students from our school. Students ages ranged from 16 to 18 years of age. Sex, gender, ethnicity, and socioeconomic background were not recorded.  These students were chosen by opportunity, from a sl psychology class, a study hall class, and a few people in the halls with an unknown class. The psychology students were not aware of this study beforehand. The control and independent variables were equally mixed in every class, no class had only control participants or only experimental participants. </p>
+	<h4>Materials  </h4>
 <p> Consent Forms (Appendix  IV)</p>
 <p>Stopwatch</p>
 <p>A stopwatch on a laptop was used in order for the timing to be inconspicuous.</p>
@@ -31,7 +32,12 @@
 <p>A word search was made out of a standardized list of words.</p>
 <p>Pencils </p>
 <p>A brown colored pencil was provided for each participant to complete the task with.</p>
-
+	<p>In this study two word puzzles are used (see appendices III and IV) one is for the experimental group and the other is for the control group. The list of experimental words was brainstormed by the researchers, but a few words are shared with the original study. The control words were randomly generated.   </p>
+	<h4>Procedure</h4>
+	<p>Participants were given consent forms and were given basic information regarding how to participate (see appendix V ). On each consent form was a number from one to thirty three. Once all participants had given consent and filled out their forms participants were called one by one out to the hallway to be given the task. They would walk down the hallway as instructed by the researchers to a table where the test was to be administered. This walk was timed by a confederate who posed as a student sitting quietly in the hall. An initial time was taken which started when the confederate saw the participant leave the classroom, and ended when they got to the table at the other end of the hallway. If the participant stalled, be it talking to someone in the hallway or another confounding event, the confederate would make sure to mark the participant’s times and their data would be thrown out. A researcher administered the test when the participant got to the table, which consisted of a crossword puzzle. Because of time constraints these tests were limited to four minutes, and the participants were not pressured to complete the test as fast as possible. Once they were done, their sheet was given to the researcher and they would walk back to class, again being timed by the confederate. Once they had come back the next participant would be called and the procedure would be repeated. Once all participants had gone through the experiment, they were debriefed en masse (see appendix VI).</p>
+	
+	
+	
 
 </body>
 </html>
