--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -35,7 +35,8 @@
 	<p>In this study two word puzzles are used (see appendices III and IV) one is for the experimental group and the other is for the control group. The list of experimental words was brainstormed by the researchers, but a few words are shared with the original study. The control words were randomly generated.   </p>
 	<h4>Procedure</h4>
 	<p>Participants were given consent forms and were given basic information regarding how to participate (see appendix V ). On each consent form was a number from one to thirty three. Once all participants had given consent and filled out their forms participants were called one by one out to the hallway to be given the task. They would walk down the hallway as instructed by the researchers to a table where the test was to be administered. This walk was timed by a confederate who posed as a student sitting quietly in the hall. An initial time was taken which started when the confederate saw the participant leave the classroom, and ended when they got to the table at the other end of the hallway. If the participant stalled, be it talking to someone in the hallway or another confounding event, the confederate would make sure to mark the participant’s times and their data would be thrown out. A researcher administered the test when the participant got to the table, which consisted of a crossword puzzle. Because of time constraints these tests were limited to four minutes, and the participants were not pressured to complete the test as fast as possible. Once they were done, their sheet was given to the researcher and they would walk back to class, again being timed by the confederate. Once they had come back the next participant would be called and the procedure would be repeated. Once all participants had gone through the experiment, they were debriefed en masse (see appendix VI).</p>
-	
+	<img src="/Billeneube.github.io/img/analysis1.png" alt="Analysis" height =200 width = 400>
+
 	
 	
 
