--- a/ee.html
+++ b/ee.html
@@ -52,6 +52,15 @@
 <p>Denshi Jisho, Jisho.org. Retrieved 8 December 2019, Yōkai Kanji, http://jisho.org/kanji/details/%E5%A6%96%E6%80%AA</p>
 
 <p>(DSM) Diagnostic and Statistical Manual of Mental Disorders: Dsm-5. Arlington, VA: American Psychiatric Association, 2013. Print.</p>
+ <p>Foster, Michael Dylan. Pandemonium and Parade: Japanese Monsters and the Culture of Yokai. 1st ed., University of California Press, 2009. JSTOR, www.jstor.org/stable/10.1525/j.ctt1ppkrc.</p>
+
+<p>Hamidah, Idah, Muammar Kadafi, and Dera Zuliyanti. “Knowledge on Japanese People’s Beliefs in the Anime Natsume Yuujinchou.” Japanese Research on Linguistics, Literature, and Culture 1.1 (2018): 92–108. Japanese Research on Linguistics, Literature, and Culture. Web.</p>
+
+<p>Nelson, John K. “Freedom of Expression: The Very Modern Practice of Visiting a Shinto Shrine.” Japanese Journal of Religious Studies, vol. 23, no. 1/2, 1996, pp. 117–153. JSTOR, www.jstor.org/stable/30233556.</p>
+
+<p>Omori, Takahiro, Director. “Natsume Yuujinchou”. Tv Tokyo, 7 July 2008. Television. 
+
+<p>Ueda, Kenji. “Contemporary Social Change and Shinto Tradition.” Japanese Journal of Religious Studies, vol. 6, no. 1/2, 1979, pp. 303–327. JSTOR, www.jstor.org/stable/30233203.</p>
 
 
 </body>
