--- a/ee.html
+++ b/ee.html
@@ -46,8 +46,7 @@
 	<h4>Works Cited </h4> 
 	<p>Ando, S., Yamaguchi, S., Aoki, Y. and Thornicroft, G. (2013), Mental health stigma in Japan. Psychiatry Clin Neurosci, 67: 471-482. doi:10.1111/pcn.12086
 
-<p>Chaudhury, Suprakash. “Hallucinations: Clinical aspects and management.” Industrial </p>
-<p>Psychiatry journal vol. 19,1 (2010): 5-12. doi:10.4103/0972-6748.77625</p>
+<p>Chaudhury, Suprakash. “Hallucinations: Clinical aspects and management.” Industrial Psychiatry journal vol. 19,1 (2010): 5-12. doi:10.4103/0972-6748.77625</p>
 
 <p>Denshi Jisho, Jisho.org. Retrieved 8 December 2019, Yōkai Kanji, http://jisho.org/kanji/details/%E5%A6%96%E6%80%AA</p>
 
