--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ function checkTime(i) {
 				<li><a href="soviet.html">History IA</a></li>
 				<li><a href="math.html">Math IA</a></li>
 				<li><a href="ib/psychology.html">Psychology IA</a></li>
+				<li><a href="ib/tok.html">ToK Essay</a></li>
 
 			</UL>
 			<h2>About Me</h2>
