--- a/ib/tok.html
+++ b/ib/tok.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="/billeneube.github.io/style.css">
+  <link rel="stylesheet" href="/Billeneube.github.io/style.css">
 <head>
 <title>ToK Essay</title>
 </head>
 <body>
-<li><a href="/billeneube.github.io/index.html">Home</a></li>
+<li><a href="/Billeneube.github.io/index.html">Home</a></li>
 
 <h1>ToK Essay</h1>
 <h3>This is my ToK Essay written for IB. Completed spring 2020.</h3>
