--- a/ib/tok.html
+++ b/ib/tok.html
@@ -24,6 +24,12 @@
 <p>	It would be wrong to say conclusively that there is no convergence between the definitions of “describe” and “explain.” Even the IB definitions begin with the same wording, “[To] Give a detailed account...” (UWW) There is an intersection of these two definitions. They both give accounts, or portray information, about whatever the subject is. There is a basis of giving accounts that are ingrained in both of the words. Description and explanation are not wholly divorced from one another. I would say that a good explanation requires a definition. Like making a cake –you can have flour or a description by itself, but you can’t have a cake -or explanation, without it. </p>
 <p>This topic has connections to many ways of knowing: mainly reason, intuition, and language. It undoubtedly has much to do with language. Some of the arguments made are about the exact definition of words. Intuition is used whenever talking about a speculative subject, and reason is used to find out the difference between having a description or explanation. </p>
 <p>It is a good habit to look at situations in the real world and see if there is a whole explanation, and not just a description. Think inquisitively about statistics and don’t trust “It could be you” slogans, because more than likely there isn’t a whole explanation, just a description being given. These topics highlight the contrast between describing and explaining. They show that there is a difference between the two, that you can’t get the whole picture by just describing something. To be truly informed, an explanation must be given.</p>
+<h3>Works Cited </h3>
+<p>(McRaney, David), “Survivorship Bias” You Are Not So Smart, May 2013,  https://youarenotsosmart.com/2013/05/23/survivorship-bias/</p>
+
+<p>(DeJohn, Jaclyn), “4 Out of 5 Marketers Recommend This: Lessons on Statistical Interpretations”, Target Marketing, October 2016. https://www.targetmarketingmag.com/article/lessons-statistical-interpretations/</p>
+
+<p>(UWW) “Command Terms from the International Baccalaureate (IB) Program/Across Disciplines”, University of Wisconsin-Whitewater, 2016 https://www.uww.edu/Documents/colleges/coeps/academics/18%20Command%20Terms%20from%20the%20International%20Baccalaureate%20January%2015-16%20workshop.pdf</p>
 
 
 </body>
