--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@ function checkTime(i) {
 			<UL>
 				<li><a href="ee.html">Extended Essay</a></li>
 				<li><a href="soviet.html">History IA</a></li>
-				<li><a href="math.html">Math IA</a></li>
-				<li><a href="ib/psychology.html">Psychology IA</a></li>
+				<li><a href="math.html">Math IA - WIP</a></li>
+				<li><a href="ib/psychology.html">Psychology IA - WIP</a></li>
 				<li><a href="ib/tok.html">ToK Essay</a></li>
 
 			</UL>
 			<h2>About Me</h2>
 			<UL>
-				<li><a href="about.html">My Biography</a></li>
+				<li><a href="about.html">My Biography - WIP</a></li>
 			</UL>
 			<h2>Contacts</h2>
-			<p> jonasrblanchard@gmail.com
+			<p> jonasblanchard@gmail.com
 			</p>
-			<p> jonasblanchard@gmail.com</p>
+			<p> jonasrblanchard@gmail.com</p>
 			<p>
 			503-347-6959
 			</p>
