--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ function checkTime(i) {
 				<li><a href="campspec.html">Camp Speculation</a></li>
 				<li><a href="raincloud.html">Rain Cloud</a></li>
 				<li><a href="webscraping.html">Webscraping Documentation</a></li>
+				<li><a href="https://algebragame-ib.github.io/game/">Algebra Game</a></li>
 
 			</UL>
 			<h2>Ib Works</h2>
