--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ function checkTime(i) {
 				<li><a href="raincloud.html">Rain Cloud</a></li>
 				<li><a href="webscraping.html">Webscraping Documentation</a></li>
 				<li><a href="https://algebragame-ib.github.io/game/">Algebra Game</a></li>
+				<li><a href="https://billeneube.github.io/journal/">Journal</a></li>
 
 			</UL>
 			<h2>Ib Works</h2>
