--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -47,7 +47,20 @@
  <p>The amount of participants is also a limitation to the credibility of this study. With little time to conduct this experiment and a lack of participants, this study only has 23 pieces of data. With what little resources this study was able to use and with big time constraints this could be something that could affect the end result. The participants themselves were chosen based on how convenient it was to conduct the study with them, so there was not much in the way of specially chosen participants. </p>
 <p>Future modifications can include a more solitary and plain walking path. The hallway had posters and students loitering around, so having a space that doesn’t have that would have less potential confounding variables. Sample size is another thing that could be improved, having more data points will make the data truer. Finally having more time to allow participants to be primed would be a good Independent Variable, as in this study it was kept constant because of time constraints. </p>
 <p>In this study there is not evidence for a significant difference in behavior between being primed or not with regards to walking speed. The P value was .656542 which has no significance. Therefore we cannot disprove the null hypothesis.</p>
-
+	<h4>Works Cited / Consulted  </h4>
+	<p>Bargh et al, ”Automaticity of Social Behavior: Direct Effects of Trait Construct
+and Stereotype Activation on Action”, Journal of Personality and Social Psychology
+1996. Vol. 71, No. 2. 230-244, https://www.thinkib.net/files/psychology/files/barghprime.pdf</p>
+	<p> TeachersCorner, “Word Search Maker” The Teacher's Corner, 2020. 
+https://worksheets.theteacherscorner.net/make-your-own/word-search/
+ </p>
+	<p> Random Lists, “Random Word Generator” Randomlists.com, 
+https://www.randomlists.com/random-words
+ </p>
+	<p>Random.com, “List Randomizer”, Random.com, 2020,
+https://www.random.org/lists/</p>
+	
+	<h4>Appendices</h4> 
 	
 
 </body>
