--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -40,14 +40,14 @@
 <img src="analysis2.PNG" alt="Analysis" height =400 width = 500>
 	<p>As is visible in the graph, there is a change between the initial and second walking times in both the control and experimental groups. The change in the control group was 0.08 seconds from 14.78 to 14.70 seconds. And for the experimental group there is a change of 0.38 seconds from 13.12 to 12.74 seconds. For the most part the standard deviation is not to variable. One to three seconds difference between the participants is more tightly compact then expected, except for the second walk control group, which had a deviation of the mean of 8 seconds, which goes from 11 seconds to 20. It is not too bad, but it could have skewed the control data, which is important for finding context for the data.</p>
 	<p>For the type of data used a chi square test was conducted. After calculating the p value, it was determined that it was not significant, with a p value of .656542. Therefore the null hypothesis is retained. There is no significant difference in walking speed with relations to being primed or the control. </p>
-	<h4>Evaluation  </h4>
+	<h3>Evaluation  </h3>
 	<p>The results found do not concur with the study it replicated. In the original Bargh et al (1996) study there was an increase in time while walking after the age priming. In this study there is a decrease in the time it took. This study's results do not fit the priming theory. This could be because of confounding variables in the study or a study that disproves the theory all together. There are many possible answers to why the theory and the results don’t concur.</p> 
 	<p>The strengths of this study are in the limitation of controllable confounding variables. Having a script is a good way to get rid of researcher bias, and having the confederate being able to see the person and be able to throw out bad data is good to limit outliers. </p>
 	<p>There are limitations with conducting this study, mainly that being held in a hallway that can have people in it could be interfering with the behavior of the participant. Possibly having the participant read a poster could greatly impact the time in which they got back, or that they had a rock in their shoe or something else that has no way of being accounted for without a larger sample size.</p>
  <p>The amount of participants is also a limitation to the credibility of this study. With little time to conduct this experiment and a lack of participants, this study only has 23 pieces of data. With what little resources this study was able to use and with big time constraints this could be something that could affect the end result. The participants themselves were chosen based on how convenient it was to conduct the study with them, so there was not much in the way of specially chosen participants. </p>
 <p>Future modifications can include a more solitary and plain walking path. The hallway had posters and students loitering around, so having a space that doesn’t have that would have less potential confounding variables. Sample size is another thing that could be improved, having more data points will make the data truer. Finally having more time to allow participants to be primed would be a good Independent Variable, as in this study it was kept constant because of time constraints. </p>
 <p>In this study there is not evidence for a significant difference in behavior between being primed or not with regards to walking speed. The P value was .656542 which has no significance. Therefore we cannot disprove the null hypothesis.</p>
-	<h4>Works Cited / Consulted  </h4>
+	<h3>Works Cited / Consulted  </h3>
 	<p>Bargh et al, ”Automaticity of Social Behavior: Direct Effects of Trait Construct
 and Stereotype Activation on Action”, Journal of Personality and Social Psychology
 1996. Vol. 71, No. 2. 230-244, https://www.thinkib.net/files/psychology/files/barghprime.pdf</p>
@@ -60,7 +60,14 @@ https://www.randomlists.com/random-words
 	<p>Random.com, “List Randomizer”, Random.com, 2020,
 https://www.random.org/lists/</p>
 	
-	<h4>Appendices</h4> 
+	<h3>Appendices</h3> 
+	<h4>Appendix I - raw data</h4>
+	<h4>Appendix II - Word puzzle Experimental (with used words)  </h4> 
+	<h4> Appendix III - Word Puzzle Control (with used words) </h4>
+	<h4>Appendix IV - Consent Form  </h4>
+	<h4> Appendix V - Debrief Script </h4>
+	<h4> Appendix VI - Standard Script
+ </h4>
 	
 
 </body>
