--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -61,13 +61,30 @@ https://www.randomlists.com/random-words
 https://www.random.org/lists/</p>
 	
 	<h3>Appendices</h3> 
+	
 	<h4>Appendix I - raw data</h4>
+	
 	<h4>Appendix II - Word puzzle Experimental (with used words)  </h4> 
+	
 	<h4> Appendix III - Word Puzzle Control (with used words) </h4>
+	
 	<h4>Appendix IV - Consent Form  </h4>
+	
 	<h4> Appendix V - Debrief Script </h4>
-	<h4> Appendix VI - Standard Script
- </h4>
+	<p>We recreated the Bargh et al (1996) study, which looked at the effect of priming on a person’s actions. We used two word puzzles that used different words to see if they had any effect on your walking speed. One test had a set of words that were meant to remind the test taker of stereotypically “elderly” things, such as Florida and knitting. The other, our control, had a set of neutral and unrelated words. We timed your walking speed going to and from the test area. </p>
+	<p>Now the experiment is over, and your data will be used for our IAs. If you want any information, such as results of our or Bargh’s study, or anything else, feel free to email us. </p>
+
+<p>[researcher@email.com]</p>
+
+<p>Thank you all for your time. </p>
+
+	
+	<h4> Appendix VI - Standard Script</h4>
+	<p>Hello, we are running a quick experiment for our psychology class. It will take about five minutes. If you are willing to participate and are above the age of 16, please raise your hand. We will hand out a consent form. Please fill out the information as best you can. Raise your hand if you have any questions. Please hold onto your consent forms. The number at the top is the order in which we will call you out.</p>
+	<p>[name] at the end of the hall will give you your task.</p>
+	<p> Go ahead and have a seat. Your task is here. Please write your participant number but not your name on the line inside, you may begin. 
+I will take your paper now, thank you, you may head back to class. You will be debriefed towards the end of the class period.</p>
+	
 	
 
 </body>
