--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -69,6 +69,20 @@ https://www.random.org/lists/</p>
 	<h4> Appendix III - Word Puzzle Control (with used words) </h4>
 	
 	<h4>Appendix IV - Consent Form  </h4>
+	<p>Today we will be conducting a study using word puzzles for our psychology IA. It should take about five minutes to complete.</p>
+<p>If you agree to participate, please keep in mind that you can withdraw at any time. All data collected will be kept anonymous. Our findings can be shared with you if you wish. You will be debriefed after the experiment should you choose to participate.</p> 
+
+<p>In agreeing to participate in today’s experiment, I acknowledge that I understand the below conditions. </p>
+<p>I can withdraw from the experiment at any time. </p>
+<p>I am 16 or above. </p>
+<p>All data collected will be kept anonymous. </p>
+<p>The experiment uses one activity and includes a debriefing statement at the end or when I chose to withdraw after beginning the experiment. 
+
+<p>Grade:                         Age:                       Signature: </p>                                                
+
+<p>Email(optional, only for results):</p>
+
+	
 	
 	<h4> Appendix V - Debrief Script </h4>
 	<p>We recreated the Bargh et al (1996) study, which looked at the effect of priming on a person’s actions. We used two word puzzles that used different words to see if they had any effect on your walking speed. One test had a set of words that were meant to remind the test taker of stereotypically “elderly” things, such as Florida and knitting. The other, our control, had a set of neutral and unrelated words. We timed your walking speed going to and from the test area. </p>
