--- a/ib/psychology.html
+++ b/ib/psychology.html
@@ -63,11 +63,12 @@ https://www.random.org/lists/</p>
 	<h3>Appendices</h3> 
 	
 	<h4>Appendix I - raw data</h4>
-	
+	<img src="raw1.png" alt="Analysis" height =200 width = 400>
+	<img src="raw2.png" alt="Analysis" height =200 width = 400>
 	<h4>Appendix II - Word puzzle Experimental (with used words)  </h4> 
-	
+	<img src="words1.png" alt="Analysis" height =200 width = 400>
 	<h4> Appendix III - Word Puzzle Control (with used words) </h4>
-	
+	<img src="words1.png" alt="Analysis" height =200 width = 400>
 	<h4>Appendix IV - Consent Form  </h4>
 	<p>Today we will be conducting a study using word puzzles for our psychology IA. It should take about five minutes to complete.</p>
 <p>If you agree to participate, please keep in mind that you can withdraw at any time. All data collected will be kept anonymous. Our findings can be shared with you if you wish. You will be debriefed after the experiment should you choose to participate.</p> 
