--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function checkTime(i) {
 				<li><a href="ee.html">Extended Essay</a></li>
 				<li><a href="soviet.html">History IA</a></li>
 				<li><a href="math.html">Math IA - WIP</a></li>
-				<li><a href="ib/psychology.html">Psychology IA - WIP</a></li>
+				<li><a href="ib/psychology.html">Psychology IA</a></li>
 				<li><a href="ib/tok.html">ToK Essay</a></li>
 
 			</UL>
