--- a/math.html
+++ b/math.html
@@ -39,8 +39,14 @@
 	<p><img src="img/math5.png" height =200 width = 200></p>
 	<p>The equation to answer this problem is deceptively simple. This circle model shows the interaction between the six participants. As shown, n = 6 in this scenario, and counting the lines there are nine interactions, so h = 9. On each dot, representing one person in the problem, is three interaction lines that lead to three people in the opposite group. There are seemingly eighteen of these lines but we just see both sides of them, so we half them into 9. The same principle is used in the other two equations. <p>
 	<p>If we multiply our n value by our party (p) value then we get eighteen. Then it can be divided into 9, which is the h-value. The equation to find the solution to the group variant problem is h=n*p2.<p> 
-	<p>Though only two groups are shown in the circle model, this equation works for multiple groups too.<p> 
+	<p>Though only two groups are shown in the circle model, this equation works for multiple groups too.</p> 
 	<h3>Works Cited</h3>
+	<p>NZMaths, “Shaking Hands” https://nzmaths.co.nz/resource/shaking-hands acc: 2/7/20</p>
+
+<p>Connelly, Ralph, “Reflecting on the handshake problem” 2/14/14 https://www.nctm.org/Publications/Teaching-Children-Mathematics/Blog/Reflecting-on-the-Handshake-Problem/ acc: 2/7/20</p>
+
+<p>Hedegaard, Rasmus. "Handshake Problem." From MathWorld--A Wolfram Web Resource, created by Eric W. Weisstein. http://mathworld.wolfram.com/HandshakeProblem.html Acc: 2/7/20</p>
+
 
 
 
