--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function checkTime(i) {
 			<UL>
 				<li><a href="ee.html">Extended Essay</a></li>
 				<li><a href="soviet.html">History IA</a></li>
-				<li><a href="math.html">Math IA - WIP</a></li>
+				<li><a href="math.html">Math IA</a></li>
 				<li><a href="ib/psychology.html">Psychology IA</a></li>
 				<li><a href="ib/tok.html">ToK Essay</a></li>
 
