--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@ li.dropdown {
 <body>
 
 <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Interviews</a>
     <div class="dropdown-content">
