--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <style>
 	ul {
   list-style-type: none;
- margin-left: 20%;
-	margin-right: 20%;
-	padding: 10px 10px 10px 10px;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
   background-color: #333;
 }
