--- a/ib/ee.html
+++ b/ib/ee.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+	<link rel="/billeneube.github.io/stylesheet" href="style.css">
 <head>
 </head>
 <body>
 
-  <li><a href="index.html">Home</a></li>
+  <li><a href="/billeneube.github.io/index.html">Home</a></li>
+
  
 
 <h1>Extended Essay</h1>
