--- a/ib/soviet.html
+++ b/ib/soviet.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/billeneube.github.io/style.css">
 <head>
 <title>History IA</title>
 </head>
 <body>
-<li><a href="index.html">Home</a></li>
+<li><a href="/billeneube.github.io/index.html">Home</a></li>
 
 <h1>History Internal Assessment</h1>
 <h3>This is my History IA written for IB. Completed winter 2020.</h3>
