--- a/ib/ee.html
+++ b/ib/ee.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<link rel="/billeneube.github.io/stylesheet" href="style.css">
+	<link rel="stylesheet" href="/billeneube.github.io/style.css">
 <head>
 </head>
 <body>
