--- a/ib/math.html
+++ b/ib/math.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/billeneube.github.io/style.css">
 <head>
 <title>Math IA</title>
 </head>
 <body>
-<li><a href="index.html">Home</a></li>
+<li><a href="/billeneube.github.io/index.html">Home</a></li>
 
 <h1>Math IA</h1>
 <p>This is my Math IA written for IB. Completed winter 2020.</p>
